--- a/index.html
+++ b/index.html
@@ -1,2 +1,7 @@
-<h1> Hello World! </h1>
-<p> My name is trstamp! I can't wait to learn more about Java! </p>
+<!DOCTYPE html>
+<html>
+    <body>
+        <h1>Hello World</h1>
+        <p>I'm hosted with GitHub Pages.</p>
+    </body>
+</html>
